force-app/main/default/objects/Outcome__c/Outcome__c.object-meta.xml
<CustomObject>
    <label>Outcome</label>
    <nameField>
        <label>Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>