force-app/main/default/objects/Outcome__c/fields/Assessment_F__c.field-meta.xml
<CustomField>
    <fullName>Assessment_F__c</fullName>
    <formula>Assessment__r.Name</formula>
    <label>Assessment</label>
    <type>Text</type>
</CustomField>