force-app/main/default/objects/Outcome__c/fields/Associated_Record__c.field-meta.xml
<CustomField>
    <fullName>Associated_Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Record_Id__c, Associated_Record_Name__c , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Record</label>
    <type>Text</type>
</CustomField>