force-app/main/default/objects/Outcome__c/fields/Associated_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Associated_Record_Name__c</fullName>
    <label>Associated Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>