force-app/main/default/objects/Outcome__c/fields/Draft_Responses__c.field-meta.xml
<CustomField>
    <fullName>Draft_Responses__c</fullName>
    <label>Draft Responses</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>