force-app/main/default/objects/Outcome__c/fields/Init_Object__c.field-meta.xml
<CustomField>
    <fullName>Init_Object__c</fullName>
    <label>Init Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>