force-app/main/default/objects/Outcome__c/fields/Total_Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Max_Score__c</fullName>
    <formula>Assessment__r.Total_Max_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Max Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>