force-app/main/default/objects/Outcome__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <summarizedField>Response__c.Score__c</summarizedField>
    <summaryForeignKey>Response__c.Outcome__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>